[package]
name = "cheph-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
async-session = "3.0.0"
axum = { version = "0.6.1", features = ["headers"] }
axum-extra = { version = "0.4.2", features = ["spa"] }
envy = "0.4.2"
http = "0.2.8"
oauth2 = "4.3.0"
once_cell = "1.16.0"
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.149", features = ["derive"] }
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.3.5", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter"] }
