[package]
name = "cheph-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
async-session = "3.0.0"
aws-config = "0.51.0"
aws-sdk-s3 = "0.21.0"
axum = { version = "0.6.1", features = ["headers"] }
axum-extra = { version = "0.4.2", features = ["spa"] }
chrono = { version = "0.4.23", features = ["serde"] }
envy = "0.4.2"
futures-util = "0.3.25"
http = "0.2.8"
oauth2 = "4.3.0"
once_cell = "1.16.0"
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
serde_with = "2.1.0"
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.3.5", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter"] }
